manifest/objects/DNBConnect__DNB_FamilyTreeData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Dun And Bradstreet Family Tree Table Settings</description>
    <fields>
        <fullName>DNBConnect__FamilyTreeJobId__c</fullName>
        <description>Family Tree Job Id</description>
        <label>FamilyTreeJobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__FamilyTreeJobStatus__c</fullName>
        <description>Family Tree Job Status</description>
        <label>FamilyTreeJobStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__Job_Type__c</fullName>
        <description>Family Tree Job Type</description>
        <label>Job_Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>DNB_FamilyTreeData</label>
</CustomObject>